[tool.poetry]
name = "omtriage"
version = "0.2.0"
description = "A tool for organizing photos and videos from OM Systems SD cards"
authors = ["Bruno Grande <grandebruno1991@gmail.com>"]
readme = "README.md"
packages = [{include = "omtriage"}]

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.0"
tqdm = "^4.67.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
mypy = "^1.13.0"

[tool.poetry.scripts]
omtriage = "omtriage.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=omtriage --cov-report=term-missing"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
