[tool.poetry]
name = "omtriage"
version = "0.2.0"
description = "A tool for organizing photos and videos from OM Systems SD cards"
authors = ["Bruno Grande <grandebruno1991@gmail.com>"]
readme = "README.md"
packages = [{include = "omtriage"}]

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
mypy = "^1.13.0"
ruff = "^0.8.1"

[tool.poetry.scripts]
omtriage = "omtriage.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=omtriage --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
